# nagoyatv-hackathon-image-recognition

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: code-quality.yml
action_helper/: move_servo_action_helper.py
model/: image_coordinate_model_provider.py
provider/: circle_coordinate_provider.py  distance_provider.py  image_coordinate_provider.py  toggle_switch_state_provider.py
render/: circle_render.py  image_render.py
util/: green_hsv_ranges.py  yellow_hsv_ranges.py
